Got shuffle up and running

--- a/bower.json
+++ b/bower.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "bootstrap-sass": "~3.3.5",
     "modernizr": "~2.8.3",
-    "shufflejs": "^4.1.0"
+    "shufflejs": "^4.1.0",
+    "isotope": "^3.0.3"
   },
   "overrides": {
     "bootstrap-sass": {
